# flappybird_plus_plus

./: .gitignore  README.md  main.py  pyinstaller.py  pyproject.toml
scripts/: lerp_graphs.py
