[tool.poetry]
name = "flappybird"
version = "0.1.0"
description = "A clone of flappy bird game built to learn python and pygame"
authors = ["Kushal-Chandar <kushalchandariit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
